Fix style on mobile bug

--- a/source/stylesheets/typography/_tp_in_content.sass
+++ b/source/stylesheets/typography/_tp_in_content.sass
@@ -118,7 +118,7 @@
     margin: 0 3px
   
   strong
-    background-image: linear-gradient(to bottom, transparent 40%, rgb(255, 241, 145) 60%)
+    background-image: linear-gradient(to bottom, $white 40%, rgb(255, 241, 145) 60%)
   
   em
     text-decoration: line-through
